--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ androidx_activity_compose_v190 = { group = "androidx.activity", name = "activity
 ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose-ui" }
 ui_tooling_preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose-ui" }
 ui_tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose-ui" }
+compose-bom = { group = "androidx.compose", name = "compose-bom", version = "2025.07.00" }
 
 androidx_material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx_material_icons_extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material-icons-extended" }
@@ -52,3 +53,4 @@ androidx_espresso_core_v351 = { group = "androidx.test.espresso", name = "espres
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
